<resources>
    <string name="app_name">Touch Barrier</string>
    <string name="quick_tile_name">Activate Barrier</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="lock_types">
        <item>None</item>
        <item>PIN</item>
        <item>Pattern</item>
    </string-array>

    <string name="title_notification">Drag down to show additional options</string>
    <string name="title_lock_config">Screen lock</string>
    <string name="close">Close</string>
    <string name="error_occurred">Error occurred, please try again</string>
    <string name="error_set_pattern_check">"Pattern does not match, try again "</string>
    <string name="error_set_pin_check">"PIN key does not match, try again "</string>
    <string name="set_pattern_success">Pattern saved</string>
    <string name="set_pin_success">PIN saved</string>
    <string name="error_did_not_set_lock">Lock configuration cancelled</string>
    <string name="set_lock_success">Lock configuration saved</string>
    <string name="pattern_lock_start">"Draw new pattern "</string>
    <string name="pattern_lock_submit">Draw pattern again to confirm</string>
    <string name="pin_lock_submit">Confirm your PIN</string>

    <string name="tutorial_1">Display over other apps</string>
    <string name="tutorial_1_desc">This is required to run Touch Barrier on top of other apps and to prevent unexpected view touches</string>
    <string name="tutorial_2">Accessibility Services</string>


    <string name="try_deny_permission">Do you want to disable?</string>
    <string name="deny_permission">Yes</string>

    <string name="accessibility_service_description">Used only to prevent unexpected navigation touches(home, back, recent app buttons) and status bar when is active.\n\nNo personal data is collected.</string>
    <string name="notification_panel_settings">Settings</string>
    <string name="double_tap_toast">Double tap to unlock</string>
    <string name="notification_panel_name">Barrier Control Panel</string>
    <string name="unlock_screen_to_toggle">Unlock device to use</string>
    <string name="notification_panel_toggle">Enable</string>
    <string name="permission_already_granted">Permissions are already granted</string>
    <string name="pin_lock_start">Choose your PIN</string>
    <string name="tutorial_2_desc">This is required to prevent unexpected navigation touches(home, back, recent app buttons) and status bar when is active</string>

    <string name="barrier_enable">Enable</string>
    <string name="options_main_title">Main Options</string>
    <string name="options_main_notification_toggle">Notification Bar</string>
    <string name="options_main_config_lock">Configure lock</string>
    <string name="options_second_close_on_unlock">Close when unlocking</string>
    <string name="options_second_title">More options</string>
    <string name="options_second_close_activity_on_enable">Close settings when enabled</string>
    <string name="options_permissions_title">Permissions</string>
    <string name="options_permissions_draw_over_others">Draw over other apps</string>
    <string name="options_permissions_accessibility_service">Accessibility Services</string>
    <string name="screen_lock">Lock Screen</string>
    <string name="none">None (double tap to icon)</string>
    <string name="pin">PIN</string>
    <string name="pattern">Pattern</string>
    <string name="pin_desc">4-digit code</string>
    <string name="pattern_desc">A combination of up to 9 points</string>
    <string name="fingerprint">Fingerpring</string>
    <string name="fingerprint_desc">System fingerprint</string>
    <string name="password">Password</string>
    <string name="password_desc">Standart text password</string>
    <string name="screen_lock_default">Configure</string>
    <string name="enter_vfx_color_transition_desc">Color Transition Desc</string>
    <string name="enter_vfx_color_transition_name">Color Transition</string>
    <string name="enter_vfx_fade_name">Fade</string>
    <string name="enter_vfx_fade_desc">Fade to selected color</string>
    <string name="enter_vfx_tv_off_name">TvOff</string>
    <string name="enter_vfx_tv_off_desc">Old Tv off</string>
    <string name="enter_vfx_transparent_name">Transparent</string>
    <string name="enter_vfx_transparent_desc">Just nothing</string>

</resources>
