<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/barrier_enable"
            android:textAppearance="@style/SingleLinePrimaryMediumText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/frame_background">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/options_main_title"
                    android:textAppearance="@style/SingleLinePrimaryMediumText"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch_notify_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/options_main_notification_toggle"
                    android:textAppearance="@style/SingleLineSecondaryText"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_title" />

                <TextView
                    android:id="@+id/screen_lock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/options_main_config_lock"
                    android:textAppearance="@style/SingleLineSecondaryText"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_notify_bar" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:entries="@array/lock_types"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/screen_lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/screen_lock" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_background">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <Switch
                    android:id="@+id/switch_close_on_unlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="true"
                    android:paddingTop="10dp"
                    android:visibility="gone"
                    android:paddingBottom="10dp"
                    android:text="@string/options_second_close_on_unlock"
                    android:textAppearance="@style/SingleLineSecondaryText"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_close_on_activation" />

                <TextView
                    android:id="@+id/additional_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/options_second_title"
                    android:textAppearance="@style/SingleLinePrimaryMediumText"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch_close_on_activation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/options_second_close_activity_on_enable"
                    android:textAppearance="@style/SingleLineSecondaryText"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/additional_title" />

            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_background">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/permissions_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/options_permissions_title"
                    android:textAppearance="@style/SingleLinePrimaryMediumText"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/perm_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/permissions_title"
                    app:layout_constraintStart_toEndOf="@+id/permissions_title"
                    app:layout_constraintTop_toTopOf="@+id/permissions_title"
                    app:srcCompat="@drawable/ic_info_outline_24dp" />

                <Switch
                    android:id="@+id/switch_perm_draw_over"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone"
                    android:text="@string/options_permissions_draw_over_others"
                    android:textAppearance="@style/SingleLineSecondaryText"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch_perm_accessibil" />

                <Switch
                    android:id="@+id/switch_perm_accessibil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/options_permissions_accessibility_service"
                    android:textAppearance="@style/SingleLineSecondaryText"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permissions_title" />

            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>